# anime-segmentation

./: .gitignore  README.md  config.yaml  pyproject.toml  ruff-llm.txt
config/: config-schedulefree.yaml  config.yaml  stage1_gt_encoder.yaml  stage2_isnet_is.yaml
configs/: anime_segmentation.yaml  base.yaml  birefnet_default.yaml  custom_compositor.yaml  default.yaml  synthesis.yaml  train.yaml
configs/experiments/: aggressive_aug.yaml  b0_baseline.yaml  b1_outref.yaml  gt_encoder_train.yaml  interm_sup.yaml
scripts/: app.py  check_dataloader.py  dataloader_test.py  download_anime_segmentation.py  export.py  inference.py  qualitative_eval.py  test.py  test_synthesis.py  test_synthesis_detailed.py  upload_dataset.py
src/anime_segmentation/: __init__.py  app.py  augmentation.py  cli_parsers.py  constants.py  data_loader.py  data_module.py  dataloader_test.py  dataset_generator.py  exceptions.py  export.py  hf_dataset.py  inference.py  lit_module.py  loss.py  metrics.py  test.py  train.py  train_cli.py
src/anime_segmentation/birefnet/: __init__.py  image_proc.py  predictor.py
src/anime_segmentation/birefnet/models/: birefnet.py  config.py
src/anime_segmentation/birefnet/models/backbones/: __init__.py  base.py  registry.py
src/anime_segmentation/birefnet/models/modules/: aspp.py  decoder_blocks.py  deform_conv.py  lateral_blocks.py  norms.py
src/anime_segmentation/data/: __init__.py  pools.py  splits.py
src/anime_segmentation/datasets/: __init__.py  combined.py  real.py  synthetic.py
src/anime_segmentation/inference/: __init__.py  foreground.py
src/anime_segmentation/lightning/: __init__.py  data.py  modules.py
src/anime_segmentation/metrics/: __init__.py  biou.py  collection.py  fmeasure.py  hce.py  mae.py  mba.py  smeasure.py  weighted_fmeasure.py
src/anime_segmentation/model/: __init__.py  ibis_net.py  inspyrenet.py  isnet.py  modnet.py  u2net.py
src/anime_segmentation/models/: __init__.py  birefnet.py  config.py  inference_wrapper.py  isnet.py  predictor.py
src/anime_segmentation/models/backbones/: build_backbone.py  registry.py
src/anime_segmentation/models/modules/: decoder_blocks.py  deform_conv.py  norms.py
src/anime_segmentation/training/: __init__.py  callbacks.py  config.py  datamodule.py  lightning_module.py  loss.py  metrics.py  model_card_template.py  protocols.py  train.py
src/anime_segmentation/training/synthesis/: __init__.py  base.py  blending.py  compositor.py  config.py  consistency.py  degradation.py  transforms.py  validation.py
src/anime_segmentation/transforms/: __init__.py  augmentation.py  color.py  geometric.py  trimap.py  v2.py
tests/: test_cli_parsers.py  test_data_loader_smoke.py  test_datamodule.py  test_inference_get_mask.py  test_model_compile.py
tests/birefnet/: conftest.py  test_backbone_output.py  test_birefnet_forward.py
tests/models/: test_backbone_output.py  test_birefnet_forward.py
tests/training/: test_metrics.py
