[project]
name = "anime-segmentation"
version = "0.1.0"
description = "Anime Segmentation Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub>=0.22",
    "jsonargparse[signatures]>=4.45.0",
    "kornia",
    "lightning",
    "numpy",
    "opencv-python",
    "pillow",
    "scipy",
    "timm",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
schedulefree = [
    "schedulefree>=1.4.1",
]
came = [
    "came-pytorch>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "scipy-stubs>=1.16.3.3",
]

app = ["gradio>6.0,<=7.0"]
export = ["onnx", "onnxslim"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T20",
    "D",
    "ANN",
    "CPY",
    "COM812",
    "ERA001",
    "S101",
    "N812",
    "N802",
    "PLR2004",
    "EM",
    "S311",
    "PLR0913",
    "C901",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.pyright]
typeCheckingMode = "standard"
