[project]
name = "anime-segmentation"
version = "0.1.0"
description = "Segmentation for anime character"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "SkyTNT" }, { name = "nusu-github" }]
maintainers = [{ name = "nusu-github" }]
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "einops",
    "huggingface-hub>0.25",
    "jsonargparse[signatures]",
    "kornia",
    "lightning",
    "numpy",
    "opencv-python>4,<5",
    "timm",
    "torch>2",
    "torchmetrics",
    "torchvision",
]

[project.optional-dependencies]
schedulefree = ["schedulefree>=1.4.1"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = ["ty", "pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["anime_segmentation"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
